--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  margin: 0;
+}
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -18,16 +22,210 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
+  background:
+    linear-gradient(to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+      rgba(var(--background-end-rgb), 1)) rgba(var(--background-start-rgb), 1);
 }
+
+.video-container {
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
+}
+
+#background-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  min-height: 100%;
+  object-fit: cover;
+
+}
+
+.video-container::before {
+  position: absolute;
+  content: "";
+  height: 100%;
+  width: 100%;
+  z-index: -99;
+  background-color: #000000e0;
+
+}
+
+.title {
+  position: absolute;
+  top: 66%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: 'Montserrat', sans-serif;
+  font-size: 2.3rem;
+  font-weight: 700;
+  text-align: center;
+  color: rgb(255, 249, 249);
+}
+
+.subtitle {
+  position: absolute;
+  top: 72%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: 'Montserrat', sans-serif;
+  font-size: 3rem;
+  font-weight: 700;
+  text-align: center;
+  color: rgb(144, 10, 10);
+}
+
+.actuality {
+  position: absolute;
+  top: 77%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.3rem;
+  font-weight: 700;
+  text-align: center;
+  color: rgb(255, 249, 249);
+  border: 2px solid rgb(255, 249, 249);
+  padding: 10px;
+}
+
+.actuality:hover {
+  background-color: rgb(255, 249, 249);
+  color: rgb(42, 135, 223);
+}
+
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+}
+
+@media screen and (max-width: 1100px) {
+  .title {
+    font-size: 2.3rem;
+  }
+
+  .subtitle {
+    font-size: 3rem;
+  }
+
+  .actuality {
+    font-size: 1.2rem;
+  }
+}
+
+@media screen and (max-width: 925px) {
+  .subtitle {
+    font-size: 2.5rem;
+  }
+}
+
+@media screen and (max-width: 770px) {
+  .subtitle {
+    font-size: 2rem;
+  }
+}
+
+@media screen and (max-width: 430px) {
+  .img {
+    height: 200px;
+    width: 200px;
+    top: 50%;
+  }
+
+  .title {
+    font-size: 1.5rem;
+  }
+
+  .subtitle {
+    font-size: 1.21rem;
+  }
+
+  .actuality {
+    font-size: 0.9rem;
+  }
+}
+
+@media screen and (max-width: 380px) {
+  .title {
+    font-size: 1.3rem;
+  }
+
+  .subtitle {
+    font-size: 1.1rem;
+  }
+
+  .actuality {
+    font-size: 0.8rem;
+  }
+}
+
+@media screen and (max-height: 1060px) {
+  .title {
+    top: 68%;
+  }
+
+  .subtitle {
+    top: 74%;
+  }
+
+  .actuality {
+    top: 79%;
+  }
+}
+
+@media screen and (max-height: 940px) {
+  .title {
+    top: 70%;
+  }
+
+  .subtitle {
+    top: 76%;
+  }
+
+  .actuality {
+    top: 81%;
+  }
+}
+
+@media screen and (max-height: 899px) {
+  .title {
+    top: 72%;
+  }
+
+  .subtitle {
+    top: 78%;
+  }
+
+  .actuality {
+    top: 83%;
+  }
+
+  .img {
+    top: 52%;
+  }
+}
+
+@media screen and (max-height: 720px) {
+  .img {
+    height: 200px;
+    width: 200px;
+  }
+
+  .title {
+    font-size: 1.5rem;
+  }
+
+  .subtitle {
+    font-size: 1.3rem;
+  }
+
+  .actuality {
+    font-size: 1.1rem;
   }
 }
